<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Portal Usuario</string>
    <string name="acerca_de">Acerca de</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="portal_usuario">Portal Usuario</string>
    <string name="inf_de_la_aplicaci_n">Inf.de la aplicación</string>
    <string name="night_mode">NIGHT MODE</string>
    <string name="modo_noche">Modo Noche</string>
    <string name="marlon_de_jesus_milanes_rivero">Marlon de Jesus Milanes Rivero</string>
    <string name="textview">TextView</string>
    <string name="pol_tica_de_privacidad">Política de Privacidad</string>
    <string name="paquete_400_mb">Paquete 400 MB</string>
    <string name="precio_5_cuc">Precio: 5 CUC</string>
    <string name="paquete_600_mb">Paquete 600 MB</string>
    <string name="precio_7_cuc">Precio: 7 CUC</string>
    <string name="precio_10_00_cuc">Precio: 10.00 CUC</string>
    <string name="paquete_2_5_gb">Paquete 2.5 GB</string>
    <string name="precio_20_00_cuc">Precio: 20.00 CUC</string>
    <string name="paquete_4_gb">Paquete 4 GB</string>
    <string name="precio_30_00_cuc">Precio: 30.00 CUC</string>
    <string name="paquete_1_gb">Paquete 1 GB</string>
    <string name="ahora_ya_puedes_navegar_m_s_r_pido_en_nuestra_red_4g_lte_y_disfrutar_los_paquetes_con_m_s_capacidad_de_datos">Ahora ya puedes navegar más rápido en nuestra red 4G/LTE y disfrutar los paquetes con más capacidad de datos</string>
    <string name="paquete_6_5_gb">Paquete 6.5 GB</string>
    <string name="precio_35_cuc">Precio: 35 CUC</string>
    <string name="paquete_10_gb">Paquete 10 GB</string>
    <string name="precio_45_cuc">Precio: 45 CUC</string>
    <string name="bolsa_correo">Bolsa Correo</string>
    <string name="precio_1_cuc">Precio: 1 CUC</string>
    <string name="bolsa_diaria">Bolsa Diaria</string>
    <string name="usage_based_pricing">Tarifa por Consumo</string>
    <string name="precio_0_10_cuc_x_mb">Precio: 0.10 CUC x MB</string>
    <string name="c_digo_de_recarga">Código de Recarga</string>
    <string name="donar_a_portal_usuario">Donar a Portal Usuario</string>
    <string name="consultar_saldo">Consultar saldo</string>
    <string name="consultar_bonos">Consultar bonos</string>
    <string name="saldo_megas">Saldo Megas</string>
    <string name="consultar_megas">Consultar megas</string>
    <string name="transferir_mi_saldo">Transferir mi saldo</string>
    <string name="solicitar_1_o_2_cuc">Solicitar 1 o 2 CUC</string>
    <string name="recargar_saldo_del_m_vil">Recargar saldo del móvil</string>
    <string name="pesquisa_en_l_nea">Pesquisa en Línea</string>
    <string name="texto_donacion">Si te gusta esta aplicación y deseas motivarnos a seguirla mejorando, realiza una donación. No importa que tan modesta sea, la intención cuenta. Gracias</string>
    <string name="monto_a_donar">Monto a donar</string>
    <string name="cancel">cancel</string>
    <string name="voz">VOZ</string>
    <string name="paquetes_lte">PAQUETES LTE</string>
    <string name="paquetes">PAQUETE</string>
    <string name="activa_tu_plan_de_min_nacionales_ahora_tarificamos_por_segundos_aprovecha_esta_oportunidad_de_ahorrar_en_tus_llamadas">Activa tu plan de MIN nacionales, ahora tarificamos por segundos, aprovecha esta oportunidad de ahorrar en tus llamadas</string>
    <string name="_1_50_cuc">1.50 CUC</string>
    <string name="plan_5_min">Plan 5 Min</string>
    <string name="_10_00_cuc">10.00 CUC</string>
    <string name="plan_40_min">Plan 40 Min</string>
    <string name="_6_50_cuc">6.50 CUC</string>
    <string name="plan_25_min">Plan 25 Min</string>
    <string name="_4_20_cuc">4.20 CUC</string>
    <string name="plan_15_min">Plan 15 Min</string>
    <string name="_2_90_cuc">2.90 CUC</string>
    <string name="plan_10_min">Plan 10 Min</string>
    <string name="plan_10_sms">Plan 10 SMS</string>
    <string name="_0_70_cuc">0.70 CUC</string>
    <string name="_2_10_cuc">2.10 CUC</string>
    <string name="_1_30_cuc">1.30 CUC</string>
    <string name="plan_45_sms">Plan 45 SMS</string>
    <string name="_2_50_cuc">2.50 CUC</string>
    <string name="activa_tu_plan_sms_eligiendo_la_cantidad_de_mensajes_de_texto_nacionales_sms_que_se_ajuste_a_tus_necesidades_y_ahorra_en_tu_consumo">Activa tu plan SMS, eligiendo la cantidad de mensajes de texto nacionales (SMS) que se ajuste a tus necesidades y ahorra en tu consumo</string>
    <string name="sms">SMS</string>
    <string name="plan_amigos">PLAN AMIGOS</string>
    <string name="_1_00_cuc">1.00 CUC</string>
    <string name="consultar_plan">Consultar Plan</string>
    <string name="adicionar_o_eliminar">Adicionar o Eliminar</string>
    <string name="activar_plan">Activar Plan</string>
    <string name="ahora_puedes_llamar_a_tus_amigos_y_familiares_con_una_tarifa_preferencial">Ahora puedes llamar a tus amigos y familiares con una tarifa preferencial</string>
    <string name="modo_normal">Modo Normal</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="msg_sure">¿Estás seguro?</string>
    <string name="send_feedback">Enviar Feedback</string>
    <string name="feedback_email" translatable="false">innovapp.soft@gmail.com</string>
    <string name="feedback_subject">Feedback sobre la aplicación Portal Usuario</string>
    <string name="error_invalid_target_ip">Dirección IP inválida</string>
    <string name="title_activity_pings_history">Historial de Pings</string>
    <string name="action_back">Atras</string>
    <string name="title_activity_ping_history">Historial de Ping</string>
    <string name="versi_n_4_4_2">Versión 4.4.2</string>
    <string name="actualizar_desde_google_play">Actualizar desde Google Play</string>
    <string name="actualizar_desde_apklis">Actualizar desde Apklis</string>
    <string name="marlon_de_jes_s_milan_s_rivero">Marlon de Jesús Milanés Rivero</string>
    <string name="t_rminos_y_condiciones">Términos y Condiciones</string>
    <string name="youtube">YouTube</string>
    <string name="instagram">Instagram</string>
    <string name="javier_github">GitHub</string>
    <string name="javier_Telegram">Telegram</string>
    <string name="facebook">Facebook</string>
    <string name="javier_pagina_facebook">Página</string>
    <string name="_1cuc_200mb_x_24h">1CUC + 200MB x 24h</string>
    <string name="enter_username">Escriba su usuario</string>
    <string name="enter_password">Escriba su clave</string>
    <string name="btn_connect">Conectarse</string>
    <string name="image1_description">App icon</string>
    <string name="btn_desconnect">Desconectarse</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="otros">Otros</string>
    <string name="appName">Nauta Connect</string>
    <string name="appDescription">Conectarse nunca fue tan simple ...</string>
    <string name="otros_sitios">Sitios de interes</string>
    <string name="saldoInicial">Saldo inicial</string>
    <string name="tiempoRestante">Tiempo Restante</string>
    <string name="tiempoTranscurrido">Tiempo consumido</string>
    <string name="estadoCuenta">Estado de la cuenta</string>
    <string name="conectadowifi">Conectado a internet</string>
    <string name="conectadodatos">Conectado a internet</string>
    <string name="noconectadowifi">No Conectado</string>
    <string name="noconectadodatos">No Conectado</string>
    <string name="estadowifi">WIFI</string>
    <string name="estadodatos">Datos Moviles</string>
    <string name="salir">Salir</string>
    <string name="yaconectadomsg">Usted ya esta conectado a Internet</string>
    <string name="sinConexion">Usted debe conectarse a una red WIFI</string>
    <string name="user_passw_error">Usuario o clave incorrecta.</string>
    <string name="info_login">Portal de Nauta</string>
    <string name="user_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="btn_acept">Aceptar</string>
    <string name="captcha_code_login">Código CAPTCHA</string>
    <string name="infoTime">Tiempo disponible:</string>
    <string name="time">00:00:00</string>
    <string name="infoUser">usuario@nauta.com.cu</string>
    <string name="nautaAccount">Cuenta Nauta</string>
    <string name="blockDate">Fecha de bloqueo</string>
    <string name="DeleteDate">Fecha de eliminacion</string>
    <string name="accountType">Tipo de cuenta</string>
    <string name="serviceType">Tipo de servicio</string>
    <string name="accountCredit">Saldo de la cuenta</string>
    <string name="mailAccount">Cuenta de correo</string>
    <string name="recharge">Recargar</string>
    <string name="infoRecharge">Introduce el código del cupón de recarga</string>
    <string name="transfer">Transferir</string>
    <string name="infoTransfer">Introduzca monto y destinatario</string>
    <string name="configuraci_n">Configuración</string>
    <string name="resident_service_running">Servicio Portal Usuario en ejecución</string>
    <string name="hide">Esconder</string>
    <string name="show">Mostrar</string>
    <string name="internet">Internet</string>
    <string name="servicios">Servicios</string>
    <string name="sencillo">Sencillo</string>
    <string name="acceda_desde_la_comodidad_de_su_casa_de_los_servicios_que_brinda_etecsa">Acceda desde la comodidad de su casa,de los servicios que brinda ETECSA</string>
    <string name="herramientas">Herramientas</string>
    <string name="planes">Planes</string>
    <string name="hide_system_apps">Ocultar aplicaciones del sistema</string>
    <string name="hide_uninstall_apps">Ocultar aplicaciones desinstaladas</string>
    <string name="ignore_list">Lista de ignorados</string>
    <string name="settings_function">Funciones</string>
    <string name="opciones_avanzadas">Opciones Avanzadas</string>
    <string name="qu_hay_de_nuevo">¿Qué hay de nuevo?</string>
    <string name="nada">• Nada</string>
    <string name="descargar_en_apklis">Descargar en Apklis</string>
    <string name="descargar_en_google_play">Descargar en Google Play</string>
    <string name="versi_n_x_x_mb">Versión x.x • ?? MB</string>
    <string name="recordar_m_s_tarde">Recordar más tarde</string>
    <string name="serviciosmenu">Servicios</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="donar_al_proyecto">Donar al proyecto</string>
    <string name="conectividad">Conectividad</string>
    <string name="utiles1">Utiles</string>
    <string name="forzar_4g">Forzar 4G</string>
    <string name="calculadora_une">Calculadora UNE</string>
    <string name="feedback1">Feedback</string>
    <string name="registro_de_errores1">Registro de errores</string>
    <string name="reportar">Reportar...</string>
    <string name="redes_sociales1">Redes sociales</string>
    <string name="canal_de_telegram">Canal de Telegram</string>
    <string name="p_gina_oficial_facebook1">Página Oficial Facebook</string>
    <string name="grupo_de_testers_en_telegram">Grupo de Testers en Telegram</string>
    <string name="invitar_amigos">Invitar Amigos</string>
    <string name="ajustes1">Ajustes</string>
    <string name="preferencias1">Preferencias</string>
    <string name="acerca_de1">Acerca de</string>
    <string name="comunidad_en_whatsapp">Comunidad en WhatsApp</string>
    <string name="politica_de_privacidad">Politica de Privacidad</string>
</resources>