<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_intro"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/img1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/dosisbold"
        android:text="@string/sencillo"
        android:textAlignment="center"
        android:textColor="@color/colorDes"
        android:textSize="@dimen/_16sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dosislight"
        android:text="@string/acceda_desde_la_comodidad_de_su_casa_de_los_servicios_que_brinda_etecsa"
        android:textAlignment="center"
        android:textColor="@color/colorDes"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>