<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_weight="0"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/custom_notification_margin"
        android:layout_marginRight="@dimen/custom_notification_margin"
        android:src="@drawable/portal"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/custom_notification_text_size"
        android:text="@string/resident_service_running"
        style="@style/TextAppearance.Compat.Notification"
        />

    <ImageButton
        android:id="@+id/show_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@drawable/background_principal_widget_normal"
        android:contentDescription="@string/show"
        android:src="@drawable/ic_baseline_visibility_24"
        tools:ignore="VectorDrawableCompat,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/hide_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@drawable/background_principal_widget_normal"
        android:contentDescription="@string/hide"
        android:src="@drawable/ic_baseline_visibility_off_24"
        tools:ignore="VectorDrawableCompat,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/hide_and_resume_button"
        android:layout_width="40dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@drawable/background_principal_widget_normal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_access_time_24"
        tools:ignore="VectorDrawableCompat,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

</LinearLayout>