<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:fontFamily="@font/displaybold"
        android:textStyle="bold"
        android:textColor="@color/colorDes"
        android:textSize="@dimen/_13ssp"
        android:paddingTop="8dp"
        android:text="@string/settings_function" />

    <RelativeLayout
        android:id="@+id/group_system"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_settings_item"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/switch_system_apps"
            android:text="@string/hide_system_apps"
            android:fontFamily="@font/displaybold"
            android:textStyle="bold"
            android:textColor="@color/colorDes"
            android:textSize="@dimen/_13ssp" />

        <Switch
            android:id="@+id/switch_system_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_uninstall"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_settings_item"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/displaybold"
            android:textStyle="bold"
            android:textColor="@color/colorDes"
            android:textSize="@dimen/_13ssp"
            android:layout_marginBottom="17dp"
            android:text="@string/hide_uninstall_apps" />

        <Switch
            android:id="@+id/switch_uninstall_appps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_ignore"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_settings_item"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/displaybold"
            android:text="@string/ignore_list"
            android:textColor="@color/colorDes"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opciones"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_settings_item"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/displaybold"
            android:text="@string/opciones_avanzadas"
            android:textColor="@color/colorDes"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
