<!-- JalexCode -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_update"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    android:filterTouchesWhenObscured="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Actualización disponible"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:background="@drawable/button_main"/>
    <LinearLayout
        android:id="@+id/cView"
        android:background="@drawable/buttom_sheep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="42dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <View
            android:id="@+id/separator"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_item_search"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@mipmap/ic_launcher_foreground"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/displaybold"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/colorDes"
                        android:gravity="center_horizontal"
                        android:text="@string/app_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/displaybold"
                        android:gravity="center_horizontal"
                        android:text="@string/versi_n_x_x_mb"
                        android:textColor="@color/colorDes"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/whats_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/displaybold"
                    android:gravity="left"
                    android:text="@string/qu_hay_de_nuevo"
                    android:textColor="@color/colorDes"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/displaybold"
                    android:gravity="left"
                    android:text="@string/nada"
                    android:textColor="@color/colorDes"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <Button
                android:id="@+id/download_apklis"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:background="@drawable/drawable_bottom"
                android:fontFamily="@font/displaybold"
                android:text="@string/descargar_en_apklis"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:id="@+id/download_ps"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@drawable/drawable_bottom1"
                android:fontFamily="@font/displaybold"
                android:text="@string/descargar_en_google_play"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp">
            </Button>


            <Button
                android:background="@drawable/drawable_bottom1"
                android:fontFamily="@font/displaybold"
                android:id="@+id/remind_me_later"
                android:layout_height="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:text="@string/recordar_m_s_tarde"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                tools:ignore="RtlCompat">

            </Button>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>